<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
>

    <TextView
        style="@android:style/TextAppearance.DeviceDefault.Large"
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_fajr_en"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp" app:layout_constraintRight_toRightOf="@+id/textview_asr_value"
        app:layout_constraintHorizontal_bias="0.523" android:layout_marginTop="29dp"
        app:layout_constraintTop_toBottomOf="@+id/daterange"/>
    <TextView
        style="@android:style/TextAppearance.DeviceDefault.Large"
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_zuhr_en"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.656" android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/textView" android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintLeft_toLeftOf="@+id/textview_asr_value"/>
    <TextView
        style="@android:style/TextAppearance.DeviceDefault.Large"
        android:id="@+id/textView3"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:text="@string/label_asr_en"
        android:layout_marginTop="91dp"
        app:layout_constraintTop_toBottomOf="@+id/textview_fajr_value" android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView

        android:id="@+id/textview_fajr_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:text="@string/sample_prayer_timing"
        app:layout_constraintRight_toLeftOf="@+id/textView" android:layout_marginRight="0dp"
        app:layout_constraintLeft_toRightOf="@+id/textView" android:layout_marginLeft="0dp"/>
    <TextView

        android:id="@+id/textview_zuhr_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:text="@string/sample_prayer_timing"
        app:layout_constraintRight_toLeftOf="@+id/textView2" android:layout_marginRight="0dp"
        app:layout_constraintLeft_toRightOf="@+id/textView2" android:layout_marginLeft="0dp"
        app:layout_constraintHorizontal_bias="0.495"/>
    <TextView

        android:id="@+id/textview_asr_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/sample_prayer_timing"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintRight_toLeftOf="@+id/textView3" android:layout_marginRight="0dp"
        app:layout_constraintLeft_toRightOf="@+id/textView3" android:layout_marginLeft="0dp"/>
    <TextView
        style="@android:style/TextAppearance.DeviceDefault.Large"
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:text="@string/label_magrib_en"
        android:layout_marginTop="115dp"
        app:layout_constraintTop_toBottomOf="@+id/textview_asr_value" android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView" android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.472"/>
    <TextView

        android:id="@+id/textview_magrib_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:text="@string/sample_prayer_timing"
        app:layout_constraintRight_toLeftOf="@+id/textView7" android:layout_marginRight="0dp"
        app:layout_constraintLeft_toRightOf="@+id/textView7" android:layout_marginLeft="0dp"
        app:layout_constraintHorizontal_bias="0.512"/>
    <TextView

        android:id="@+id/textview_isha_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        tools:text="@string/sample_prayer_timing"
        app:layout_constraintRight_toLeftOf="@+id/textView10" android:layout_marginRight="0dp"
        app:layout_constraintLeft_toRightOf="@+id/textView10" android:layout_marginLeft="0dp"/>
    <TextView
        style="@android:style/TextAppearance.DeviceDefault.Large"
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:text="@string/label_isha_en"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView2" android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/textView2" android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintBottom_toTopOf="@+id/textView7"/>
    <TextView
        android:id="@+id/daterange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="July 1"
    />
</android.support.constraint.ConstraintLayout></android.support.v4.widget.NestedScrollView>